# crawler

./: .gitignore  README.md  pyproject.toml  test_business_year.py  test_founded_year.py  update_all_companies.py
.github/ISSUE_TEMPLATE/: 이슈-템플릿.md
data/edinet_reports/: cyberagent.json  dena.json  fujitsu.json  lineyahoo.json  mercari.json  nttdata.json  rakuten.json  recruit.json  softbank.json  sony.json
data/logo_info/: cyberagent_logo.json  dena_logo.json  fujitsu_logo.json  lineyahoo_logo.json  mercari_logo.json  nttdata_logo.json  rakuten_logo.json  recruit_logo.json  softbank_logo.json  sony_logo.json  zozo_logo.json
scripts/: save_company_to_mongodb.py  translate_json_to_korean.py
src/jap_syu/: base_crawler.py  models.py
src/jap_syu/crawlers/: recruit.py
src/jap_syu/utils/: database.py  edinet.py  fetcher.py  logo_fetcher.py
